# B78XH

./: .gitignore  .gitmodules  B787_10_VSD.css  B787_10_VSD.html  CHANGELOG.md  README.md  de-DE.locPak  es-ES.locPak  es-MX.locPak  fi-FI.locPak  gulpfile.js  layout.json  manifest.json  nb-NO.locPak  package-lock.json  package.json  thirdparty_licenses.txt  tsconfig.json
.github/: CHANGELOG.md  CONTRIBUTING.md  Contributing.md  FEATURES.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  keylabeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  bug_report_beta.yaml  config.yml  feature_request_beta.yaml  model_behavior_report.yml
.github/workflows/: discord.yml  npm-gulp.yml
Cockpit/: ReadMe.txt
Data/: DSEG-LICENSE.txt
ModelBehaviorDefs/Development/: CDUFix.xml  COMCpp.xml  Index.xml
ModelBehaviorDefs/Heavy/: Index.xml
ModelBehaviorDefs/Temporary/: Index.xml
SimObjects/Asobo_B787_10/: engines.cfg
buildScripts/: b78xh.js  locPak.js
src/: gulpfile.js  package-lock.json  package.json  tsconfig.json
src/hdapi/: api.js  (+2 more)
src/systems/b787_systems/: Cargo.toml
src/systems/systems/: Cargo.toml
src/systems/systems/src/: lib.rs
src/systems/systems/src/electrical/: battery.md  battery.rs  battery_charge_limiter.rs  consumption.rs  emergency_generator.rs  energency_generator.rs  engine_generator.rs  external_power_source.rs  mod.rs  static_inverter.rs  test.rs  transformer_rectifier.rs
src/systems/systems/src/landing_gear/: mod.rs
src/systems/systems/src/shared/: low_pass_filter.rs  mod.rs
src/systems/systems/src/simulation/: mod.rs  test.rs  update_context.rs
(+619 files in other folders)
