[package]
name = "systems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uom = "0.32.0"
rand = { version = "0.8.0", features = ["small_rng"] }
rand_distr = "0.4.3"
ntest = "0.7.2"
num-derive = "0.3.3"
num-traits = "0.2.14"
nalgebra = "0.25.0"
bounded-vec-deque = "0.1.1"
fxhash = "0.2.1"

[dev-dependencies]
rstest = "0.10.0"